Revamp testing infrastructure, use gh actions
Centralize options in setup.cfg, DRY, and skip common laws test.

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,8 @@ test =
 	pytest >= 3.4
 	pytest-cov >= 2.5
 	vcrpy >= 1.11
+lint =
+	flake8 >= 3.5
 
 [options.packages.find]
 exclude =
@@ -50,3 +52,18 @@ exclude =
 [options.entry_points]
 console_scripts =
 	legipy = legipy.__main__:cli
+
+[tool:pytest]
+addopts = --cov=legipy
+
+
+[tox:tox]
+envlist = py2.7, py3.4, py3.5, py3.6, py3.7, py3.8, py3.9, pypy2.7, pypy3.5, flake8
+
+[testenv]
+commands = pytest
+extras = test
+
+[testenv:flake8]
+commands = flake8 legipy
+extras = lint
