--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,8 @@ install_requires =
 	urllib3[secure] >= 1.24
 	six >= 1.11
 	requests-cache >= 0.5.2
+	selenium ~= 3.141
+	appdirs
 
 [options.extras_require]
 test =
