--- a/setup.cfg
+++ b/setup.cfg
@@ -13,16 +13,10 @@ classifiers =
 	Development Status :: 4 - Beta
 	License :: OSI Approved :: MIT License
 	Operating System :: OS Independent
-	Programming Language :: Python :: 2
-	Programming Language :: Python :: 2.7
 	Programming Language :: Python :: 3
-	Programming Language :: Python :: 3.4
-	Programming Language :: Python :: 3.5
-	Programming Language :: Python :: 3.6
-	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: Implementation :: PyPy
 
-python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
+python_requires = >=3.6
 
 [options]
 include_package_data = True
@@ -33,7 +27,6 @@ install_requires =
 	html5lib >= 1.0
 	requests >= 2.20
 	urllib3[secure] >= 1.24
-	six >= 1.11
 	requests-cache >= 0.5.2
 	selenium ~= 3.141
 	appdirs
@@ -61,7 +54,7 @@ addopts = --cov=legipy
 
 
 [tox:tox]
-envlist = py2.7, py3.4, py3.5, py3.6, py3.7, py3.8, py3.9, pypy2.7, pypy3.5, flake8
+envlist = py3.6, py3.7, py3.8, py3.9, py3.10, pypy3.6, flake8
 
 [testenv]
 commands = pytest
